2002-02-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: locking erro fixed by Stephen brandon

2002-02-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSInvocation.h: Remove _argframe ivar
	* Source/NSInvocation.m: Simplify by removing _argframe ivar and
	using _frame throughout to hold arguments. Fix checks for valid frame.
	* Source/callframe.m: Initialise newly created frame with zeros so
	that setting an object in an invocation should work when the
	invocation is retaining its contents.
	* configure.in: Disable ffi and warn about it.
	* configure: regenerated
	* Source/NSRunLoop.m: ([acceptInputForMode:beforeDate:]) block until
	limit date even if no I/O is possible.
	* Source/NSUserDefaults.m: Patch by Alexander Malmberg to try all
	listed locales rather than giving up at first failure.
	* Headers/gnustep/base/GSUnion.h: Enclose types bitmask in brackets
	to avoid *all* types being included in the union!  Should decrease
	memory footprint and increase speed of many classes.
	* Source/NSString.m: ([stringByStandardizingPath]) memory leak
	fixed and windows path check fixed ... patch by Michael Scheibler.
	Also commented/documented the method.

2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Removed some code that was doing nothing,
	and tidied a little.

2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSPathUtilities.h: GSDefaultsRootForUser()
	function added.
	* Source/NSUser.m: Many alterations to do with correcting the
	file paths used to use GNUSTEP_USER_ROOT, and to get them to
	vary nicely when GSSetUserName() is called.  Added function
	GSDefaultsRootForUser() to get a defaults directory based on
	a new environment varibale, or use GNUSTEP_USER_ROOT.
	* Source/NSUserDefaults.m: Use GSDefaultsRootForUser()
	Fix a few bugs in setting up defaults database.
	Move defaults database to the Defaults subdirectory.
	* Source/Headers/GSIMap.h: Fix error in last commit.
